hw-config-secret/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content-volume
              mountPath: /usr/share/nginx/html

        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080

      volumes:
        - name: web-content-volume
          configMap:
            name: web-content
